# boltr_burn

./: .gitignore  BOLTR_BURN_PRD_AND_SPEC.md  Cargo.toml  LICENSE  README.md  boltr_burn_bootstrap
.github/workflows/: ci.yml
boltr-backend-burn/: Cargo.toml
boltr-backend-burn/src/: backend.rs  burn_compat.rs  checkpoint.rs  device.rs  lib.rs  tensor_ops.rs
boltr-backend-burn/src/attention/: mod.rs  pair_bias.rs
boltr-backend-burn/src/boltz2/: affinity.rs  atom_window_keys.rs  confidence.rs  confidence_utils.rs  diffusion.rs  diffusion_conditioning.rs  diffusion_geometry.rs  distogram.rs  encoders.rs  input_embedder.rs  mod.rs  model.rs  msa_module.rs  relative_position.rs  steering.rs  template_module.rs  transformers.rs  trunk.rs
boltr-backend-burn/src/layers/: mod.rs  outer_product_mean_msa.rs  pair_weighted_averaging.rs  pairformer.rs  pairformer_no_seq.rs  transition.rs  triangular_attention.rs  triangular_mult.rs
boltr-backend-burn/tests/: diffusion_golden.rs  pairformer_golden.rs  predict_step_smoke.rs  trunk_init_golden.rs
boltr-backend-burn/tests/fixtures/: README.md
boltr-backend-burn/tests/fixtures/pairformer_golden/: README.md
boltr-backend-burn/tests/fixtures/trunk_init_golden/: README.md
boltr-backend-core/: Cargo.toml
boltr-backend-core/src/: backend.rs  boltz_hparams.rs  checkpoint.rs  inference_keys.rs  lib.rs  predict_args.rs
boltr-backend-core/tests/fixtures/hparams/: minimal.json  sample_full.json
boltr-burn-bridge/: Cargo.toml
boltr-burn-bridge/src/: lib.rs
boltr-burn-cli/: Cargo.toml
boltr-burn-cli/src/: main.rs
docs/: BURN_NUMERICAL_TOLERANCES.md  IMPLEMENTATION_PLAN.md
