[workspace]
resolver = "2"
members = [
    "boltr-backend-core",
    "boltr-backend-burn",
    "boltr-burn-bridge",
    "boltr-burn-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SampleBias"]
license = "MIT"
repository = "https://github.com/SampleBias/boltr_burn"
rust-version = "1.85"

[workspace.dependencies]
# Shared with Boltr I/O layer
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
safetensors = "0.4"
json5 = "0.4"
dirs = "5.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Burn ML (pin workspace-wide; re-evaluate quarterly)
burn = { version = "0.21.0", default-features = false }
burn-store = { version = "0.21.0", default-features = false, features = ["safetensors"] }

# Boltr I/O — git dep for CI; override locally via `.cargo/config.toml` patch (see README)
boltr-io = { git = "https://github.com/SampleBias/Boltr.git", branch = "main" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
